<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/colorAccent"
    android:id="@+id/drawablelayout_header"
    android:fitsSystemWindows="true"
    android:layout_height="200dp">
    <ImageView
        android:layout_width="200dp"
        android:scaleType="centerCrop"
        android:alpha="0.3"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"
        android:layout_marginRight="-20dp"
        android:rotation="315"
        android:src="@mipmap/ic_android"
        android:layout_height="200dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_gravity="right"
        android:layout_margin="16dp"
        android:id="@+id/tosetting"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="40dp"
            android:src="@mipmap/ic_setting"
            android:tint="@color/white"
            android:alpha="0.8"
            android:padding="8dp"
            android:layout_height="40dp" />
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:text="设置"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:gravity="bottom"
        android:orientation="vertical"
        android:id="@+id/App"
        android:visibility="gone"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/nav_header_desc"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:srcCompat="@drawable/icon_245" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/my_app_name"
            android:id="@+id/text"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/version" />

    </LinearLayout>

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:gravity="bottom|center"
        android:orientation="vertical"
        android:id="@+id/User"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:fitsSystemWindows="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <esqeee.xieqing.com.eeeeee.widget.CircleImageView
            android:id="@+id/user_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="小白"
                android:id="@+id/user_name"
                android:textSize="17dp"
                android:textColor="@color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="退出登录"
                android:id="@+id/user_out"
                android:gravity="center"
                android:layout_marginLeft="16dp"
                android:background="@drawable/login_out"
                android:textSize="11dp"
                android:textColor="@color/white"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </LinearLayout>

        <TextView
            android:id="@+id/user_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/white"
            android:text="积分 0" />

    </LinearLayout>
</FrameLayout>